:zap: Catnip: prevent block selection when clicking inside advanced options, make options readable when its parent block is selected

--- a/src/styl/tags/shared/scriptables/catnip-block.styl
+++ b/src/styl/tags/shared/scriptables/catnip-block.styl
@@ -225,6 +225,9 @@ catnip-block, .catnip-block
         .catnip-block-Blocks
             background mix(act, backgroundDeeper, 65%)
             border-color mix(borderBright, backgroundDeeper, 85%)
+        .catnip-block-Options
+            color text
+            background background
         if (themeDark)
             .catnip-block-Blocks
                 background mix(act, backgroundDeeper, 35%)
